[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/options_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/options_controls.gd" type="Script" id=2]
[ext_resource path="res://ui/options_video.gd" type="Script" id=3]
[ext_resource path="res://ui/labeled_button.tscn" type="PackedScene" id=5]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -30.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
margin_right = 924.0
margin_bottom = 436.0
size_flags_vertical = 3

[node name="General" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Video" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 3 )

[node name="Fullscreen" type="CheckButton" parent="VBoxContainer/TabContainer/Video"]
margin_top = 88.0
margin_right = 916.0
margin_bottom = 128.0
text = "Fullscreen"

[node name="Audio" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Controls" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="InvertX" type="CheckButton" parent="VBoxContainer/TabContainer/Controls"]
margin_right = 916.0
margin_bottom = 40.0
text = "Invert X"

[node name="InvertY" type="CheckButton" parent="VBoxContainer/TabContainer/Controls"]
margin_top = 44.0
margin_right = 916.0
margin_bottom = 84.0
text = "Invert Y"

[node name="HSens" type="HBoxContainer" parent="VBoxContainer/TabContainer/Controls"]
margin_top = 88.0
margin_right = 916.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Controls/HSens"]
margin_top = 1.0
margin_right = 80.0
margin_bottom = 15.0
text = "H Sensitivity"

[node name="HSlider" type="HSlider" parent="VBoxContainer/TabContainer/Controls/HSens"]
margin_left = 84.0
margin_right = 916.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.1
tick_count = 10

[node name="VSens" type="HBoxContainer" parent="VBoxContainer/TabContainer/Controls"]
margin_top = 108.0
margin_right = 916.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Controls/VSens"]
margin_top = 1.0
margin_right = 78.0
margin_bottom = 15.0
text = "V Sensitivity"

[node name="HSlider" type="HSlider" parent="VBoxContainer/TabContainer/Controls/VSens"]
margin_left = 82.0
margin_right = 916.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.1
tick_count = 10

[node name="Experimental" type="VBoxContainer" parent="VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 446.0
margin_right = 924.0
margin_bottom = 490.0
alignment = 1

[node name="SaveButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 360.0
margin_top = 0.0
margin_right = 460.0
margin_bottom = 44.0

[node name="Label" parent="VBoxContainer/HBoxContainer/SaveButton" index="0"]
text = "Save"

[node name="ExitButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 464.0
margin_top = 0.0
margin_right = 564.0
margin_bottom = 44.0

[node name="Label" parent="VBoxContainer/HBoxContainer/ExitButton" index="0"]
text = "Exit"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 500.0
margin_right = 82.0
margin_bottom = 520.0
size_flags_horizontal = 0
text = "Quit Game"

[editable path="VBoxContainer/HBoxContainer/SaveButton"]
[editable path="VBoxContainer/HBoxContainer/ExitButton"]
